--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "botbuilder": "^3.12.0",
     "botbuilder-azure": "^3.0.4",
     "coinbase": "^2.0.6",
+    "node-cmd": "^3.0.0",
     "restify": "^6.3.4"
   },
   "devDependencies": {},
